// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Group create component 1`] = `
<CheckGroup
  checkAllLabel="全选"
  checkedList={Array []}
  disableAll={false}
  hasCheckAll={true}
  onChange={[Function]}
  options={
    Array [
      Object {
        "label": "选项1",
        "value": 1,
      },
      Object {
        "label": "选项2",
        "value": 2,
      },
      Object {
        "label": "选项3",
        "value": 3,
      },
    ]
  }
>
  <div
    className="el-checkbox-group"
  >
    <div
      className="el-checkbox-row el-check-all"
    >
      <Checkbox
        checked={false}
        checkedList={Array []}
        disabled={false}
        indeterminate={0}
        label="全选"
        onChange={[Function]}
      >
        <label
          className="el-checkbox-wrapper"
        >
          <span
            className="el-checkbox"
          >
            <input
              checked={false}
              className="el-checkbox-input"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="fa fa-square-o el-unchecked"
            />
          </span>
          <span>
            全选
          </span>
        </label>
      </Checkbox>
    </div>
    <div
      className="el-checkbox-row"
    >
      <Checkbox
        checked={0}
        checkedList={Array []}
        disabled={false}
        key="0"
        label="选项1"
        onChange={[Function]}
        value={1}
      >
        <label
          className="el-checkbox-wrapper"
        >
          <span
            className="el-checkbox"
          >
            <input
              checked={0}
              className="el-checkbox-input"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
              value={1}
            />
            <span
              className="fa fa-square-o el-unchecked"
            />
          </span>
          <span>
            选项1
          </span>
        </label>
      </Checkbox>
      <Checkbox
        checked={0}
        checkedList={Array []}
        disabled={false}
        key="1"
        label="选项2"
        onChange={[Function]}
        value={2}
      >
        <label
          className="el-checkbox-wrapper"
        >
          <span
            className="el-checkbox"
          >
            <input
              checked={0}
              className="el-checkbox-input"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
              value={2}
            />
            <span
              className="fa fa-square-o el-unchecked"
            />
          </span>
          <span>
            选项2
          </span>
        </label>
      </Checkbox>
      <Checkbox
        checked={0}
        checkedList={Array []}
        disabled={false}
        key="2"
        label="选项3"
        onChange={[Function]}
        value={3}
      >
        <label
          className="el-checkbox-wrapper"
        >
          <span
            className="el-checkbox"
          >
            <input
              checked={0}
              className="el-checkbox-input"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
              value={3}
            />
            <span
              className="fa fa-square-o el-unchecked"
            />
          </span>
          <span>
            选项3
          </span>
        </label>
      </Checkbox>
    </div>
  </div>
</CheckGroup>
`;

exports[`Checkbox Group define disableAll 1`] = `
<CheckGroup
  checkAllLabel="全选"
  checkedList={Array []}
  disableAll={true}
  hasCheckAll={true}
  onChange={[Function]}
  options={
    Array [
      Object {
        "label": "选项1",
        "value": 1,
      },
      Object {
        "label": "选项2",
        "value": 2,
      },
      Object {
        "label": "选项3",
        "value": 3,
      },
    ]
  }
>
  <div
    className="el-checkbox-group"
  >
    <div
      className="el-checkbox-row el-check-all"
    >
      <Checkbox
        checked={false}
        checkedList={Array []}
        disabled={true}
        indeterminate={0}
        label="全选"
        onChange={[Function]}
      >
        <label
          className="el-checkbox-wrapper el-disabled"
        >
          <span
            className="el-checkbox"
          >
            <input
              checked={false}
              className="el-checkbox-input"
              disabled={true}
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="fa fa-square-o el-unchecked"
            />
          </span>
          <span>
            全选
          </span>
        </label>
      </Checkbox>
    </div>
    <div
      className="el-checkbox-row"
    >
      <Checkbox
        checked={0}
        checkedList={Array []}
        disabled={true}
        key="0"
        label="选项1"
        onChange={[Function]}
        value={1}
      >
        <label
          className="el-checkbox-wrapper el-disabled"
        >
          <span
            className="el-checkbox"
          >
            <input
              checked={0}
              className="el-checkbox-input"
              disabled={true}
              onChange={[Function]}
              type="checkbox"
              value={1}
            />
            <span
              className="fa fa-square-o el-unchecked"
            />
          </span>
          <span>
            选项1
          </span>
        </label>
      </Checkbox>
      <Checkbox
        checked={0}
        checkedList={Array []}
        disabled={true}
        key="1"
        label="选项2"
        onChange={[Function]}
        value={2}
      >
        <label
          className="el-checkbox-wrapper el-disabled"
        >
          <span
            className="el-checkbox"
          >
            <input
              checked={0}
              className="el-checkbox-input"
              disabled={true}
              onChange={[Function]}
              type="checkbox"
              value={2}
            />
            <span
              className="fa fa-square-o el-unchecked"
            />
          </span>
          <span>
            选项2
          </span>
        </label>
      </Checkbox>
      <Checkbox
        checked={0}
        checkedList={Array []}
        disabled={true}
        key="2"
        label="选项3"
        onChange={[Function]}
        value={3}
      >
        <label
          className="el-checkbox-wrapper el-disabled"
        >
          <span
            className="el-checkbox"
          >
            <input
              checked={0}
              className="el-checkbox-input"
              disabled={true}
              onChange={[Function]}
              type="checkbox"
              value={3}
            />
            <span
              className="fa fa-square-o el-unchecked"
            />
          </span>
          <span>
            选项3
          </span>
        </label>
      </Checkbox>
    </div>
  </div>
</CheckGroup>
`;

exports[`Checkbox Group define hasCheckAll 1`] = `
<CheckGroup
  checkAllLabel="全选"
  checkedList={Array []}
  disableAll={false}
  hasCheckAll={false}
  onChange={[Function]}
  options={
    Array [
      Object {
        "label": "选项1",
        "value": 1,
      },
      Object {
        "label": "选项2",
        "value": 2,
      },
      Object {
        "label": "选项3",
        "value": 3,
      },
    ]
  }
>
  <div
    className="el-checkbox-group"
  >
    <div
      className="el-checkbox-row el-check-all"
    />
    <div
      className="el-checkbox-row"
    >
      <Checkbox
        checked={0}
        checkedList={Array []}
        disabled={false}
        key="0"
        label="选项1"
        onChange={[Function]}
        value={1}
      >
        <label
          className="el-checkbox-wrapper"
        >
          <span
            className="el-checkbox"
          >
            <input
              checked={0}
              className="el-checkbox-input"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
              value={1}
            />
            <span
              className="fa fa-square-o el-unchecked"
            />
          </span>
          <span>
            选项1
          </span>
        </label>
      </Checkbox>
      <Checkbox
        checked={0}
        checkedList={Array []}
        disabled={false}
        key="1"
        label="选项2"
        onChange={[Function]}
        value={2}
      >
        <label
          className="el-checkbox-wrapper"
        >
          <span
            className="el-checkbox"
          >
            <input
              checked={0}
              className="el-checkbox-input"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
              value={2}
            />
            <span
              className="fa fa-square-o el-unchecked"
            />
          </span>
          <span>
            选项2
          </span>
        </label>
      </Checkbox>
      <Checkbox
        checked={0}
        checkedList={Array []}
        disabled={false}
        key="2"
        label="选项3"
        onChange={[Function]}
        value={3}
      >
        <label
          className="el-checkbox-wrapper"
        >
          <span
            className="el-checkbox"
          >
            <input
              checked={0}
              className="el-checkbox-input"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
              value={3}
            />
            <span
              className="fa fa-square-o el-unchecked"
            />
          </span>
          <span>
            选项3
          </span>
        </label>
      </Checkbox>
    </div>
  </div>
</CheckGroup>
`;

exports[`Checkbox Group define options str 1`] = `
<CheckGroup
  checkAllLabel="全选"
  checkedList={Array []}
  disableAll={true}
  hasCheckAll={true}
  onChange={[Function]}
  options={
    Array [
      1,
      2,
      3,
    ]
  }
>
  <div
    className="el-checkbox-group"
  >
    <div
      className="el-checkbox-row el-check-all"
    >
      <Checkbox
        checked={false}
        checkedList={Array []}
        disabled={true}
        indeterminate={0}
        label="全选"
        onChange={[Function]}
      >
        <label
          className="el-checkbox-wrapper el-disabled"
        >
          <span
            className="el-checkbox"
          >
            <input
              checked={false}
              className="el-checkbox-input"
              disabled={true}
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="fa fa-square-o el-unchecked"
            />
          </span>
          <span>
            全选
          </span>
        </label>
      </Checkbox>
    </div>
    <div
      className="el-checkbox-row"
    >
      <Checkbox
        checked={0}
        checkedList={Array []}
        disabled={true}
        key="0"
        label={1}
        name={1}
        onChange={[Function]}
        value={1}
      >
        <label
          className="el-checkbox-wrapper el-disabled"
        >
          <span
            className="el-checkbox"
          >
            <input
              checked={0}
              className="el-checkbox-input"
              disabled={true}
              name={1}
              onChange={[Function]}
              type="checkbox"
              value={1}
            />
            <span
              className="fa fa-square-o el-unchecked"
            />
          </span>
          <span>
            1
          </span>
        </label>
      </Checkbox>
      <Checkbox
        checked={0}
        checkedList={Array []}
        disabled={true}
        key="1"
        label={2}
        name={2}
        onChange={[Function]}
        value={2}
      >
        <label
          className="el-checkbox-wrapper el-disabled"
        >
          <span
            className="el-checkbox"
          >
            <input
              checked={0}
              className="el-checkbox-input"
              disabled={true}
              name={2}
              onChange={[Function]}
              type="checkbox"
              value={2}
            />
            <span
              className="fa fa-square-o el-unchecked"
            />
          </span>
          <span>
            2
          </span>
        </label>
      </Checkbox>
      <Checkbox
        checked={0}
        checkedList={Array []}
        disabled={true}
        key="2"
        label={3}
        name={3}
        onChange={[Function]}
        value={3}
      >
        <label
          className="el-checkbox-wrapper el-disabled"
        >
          <span
            className="el-checkbox"
          >
            <input
              checked={0}
              className="el-checkbox-input"
              disabled={true}
              name={3}
              onChange={[Function]}
              type="checkbox"
              value={3}
            />
            <span
              className="fa fa-square-o el-unchecked"
            />
          </span>
          <span>
            3
          </span>
        </label>
      </Checkbox>
    </div>
  </div>
</CheckGroup>
`;

exports[`Checkbox create component 1`] = `
<Checkbox
  checked={false}
  onChange={[Function]}
>
  <label
    className="el-checkbox-wrapper"
  >
    <span
      className="el-checkbox"
    >
      <input
        checked={false}
        className="el-checkbox-input"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="fa fa-square-o el-unchecked"
      />
    </span>
    <span />
  </label>
</Checkbox>
`;

exports[`Checkbox define checked 1`] = `
<Checkbox
  checked={true}
  onChange={[Function]}
>
  <label
    className="el-checkbox-wrapper"
  >
    <span
      className="el-checkbox"
    >
      <input
        checked={true}
        className="el-checkbox-input"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="fa fa-check-square el-checked"
      />
    </span>
    <span />
  </label>
</Checkbox>
`;

exports[`Checkbox define disabled 1`] = `
<Checkbox
  checked={false}
  disabled={true}
  onChange={[Function]}
>
  <label
    className="el-checkbox-wrapper el-disabled"
  >
    <span
      className="el-checkbox"
    >
      <input
        checked={false}
        className="el-checkbox-input"
        disabled={true}
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="fa fa-square-o el-unchecked"
      />
    </span>
    <span />
  </label>
</Checkbox>
`;

exports[`Checkbox define readOnly 1`] = `
<Checkbox
  checked={false}
  onChange={[Function]}
  readOnly={true}
>
  <label
    className="el-checkbox-wrapper"
  >
    <span
      className="el-checkbox"
    >
      <input
        checked={false}
        className="el-checkbox-input"
        onChange={[Function]}
        readOnly={true}
        type="checkbox"
      />
      <span
        className="fa fa-square-o el-unchecked"
      />
    </span>
    <span />
  </label>
</Checkbox>
`;

exports[`Checkbox define switch 1`] = `
<Checkbox
  checked={false}
  onChange={[Function]}
  type="switch"
>
  <label
    className="el-checkbox-wrapper"
  >
    <span
      className="el-checkbox el-switch"
    >
      <input
        checked={false}
        className="el-checkbox-input"
        onChange={[Function]}
        type="checkbox"
      />
      <span />
    </span>
    <span />
  </label>
</Checkbox>
`;
